# C-CPP

./: .gitignore  CMakeLists.txt
C/: 1_2.cpp  1_3.cpp  2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  6_1.cpp  6_2.cpp  6__11.cpp  CMakeLists.txt  test.cpp  test_1.cpp
C_C++/: 1_2.cpp  1_3.cpp  2_2.cpp  2_4.cpp  2_5.cpp  6_1.cpp  6_2.cpp  6_3.cpp  6_4.cpp  apple_q.cpp  elephant_water.cpp  test_1.cpp
C_C++/CLion_projects_B/OCR/: CMakeLists.txt  main.cpp
C_C++/C_Course/: addNumber.c  class1.c  define.c  sumExp.c
C_C++/Clion_projects_linux/CVTest/: CMakeLists.txt  main.cpp
C_C++/Clion_projects_linux/ocr1/: CMakeLists.txt  main.cpp
C_C++/Complete1/: CMakeLists.txt  main.c  max.c  max.h  min.c  min.h
C_C++/Cpp-basics/: AccessSpecifiers.cpp  Array2d.cpp  InsertionOverloading.cpp  OperatorOverloading.cpp  Template.cpp  calculateTrianle.cpp  classPractise.cpp  constantsQualify.cpp  ellipsis.cpp  final.cpp  functionPointer.cpp  map.cpp  myCalculator.cpp  namespace.cpp  p1.cpp  polyMorphism.cpp  preprocessor.cpp  returnByReference.cpp  staticVariables.cpp  streams.cpp  stringClass.cpp  studentClass.cpp  switchCase.cpp  virtualDestructor.cpp
C_C++/Cpp-data-structures/: Recursion.cpp  array.cpp  arrayADT.cpp  linkedList.cpp  quickSort.cpp  staticDynamicArray.cpp  sturctureAsParameter.cpp  templatePractise.cpp  typesOfRecurrsion.cpp  vectors.cpp
C_C++/Cpp-small-projects/: 2_1.cpp  AccessSpecifiers.cpp  AccessirAndMutators.cpp  Array2d.cpp  ArrayPractise.cpp  BaseClassPointer.cpp  Inheritence.cpp  InheritenceConstructors..cpp  InsertionOverloading.cpp  NestedClass.cpp  OperatorOverloading.cpp  ScopeResolution.cpp  Serialization.cpp  StringPratices.cpp  Template.cpp  TypesOfFunctionsInClass.cpp  abstractClass.cpp  betterCalculator.cpp  c11features.cpp  class.txt  classPractise.cpp  constantsQualify.cpp  constructors.cpp  destructor.cpp  exceptionHandling.cpp  exceptionHandling2.cpp  friendClass.cpp  functionPointer.cpp  functionTemplate.cpp  lambda.cpp  loopPractise.cpp  map.cpp  multiplicationTable.cpp  oops.cpp  pointerPractise.cpp  pointerProblems.cpp  polyMorphism.cpp  preprocessor.cpp  reverse.cpp  (+6 more)
C_C++/HPC-Exercise/untitled/: CMakeLists.txt
(+124 files in other folders)
