cmake_minimum_required(VERSION 3.17)
SET(CMAKE_TOOLCHAIN_FILE "D:/vcpkg-master/vcpkg-master/scripts/buildsystems/vcpkg.cmake")
if(DEFINED ENV{VCPKG_DEFAULT_TRIPLET} AND NOT DEFINED VCPKG_TARGET_TRIPLET)
    set(VCPKG_TARGET_TRIPLET "$ENV{VCPKG_DEFAULT_TRIPLET}" CACHE STRING "")
endif()
project(untitled)
find_package(Eigen3 CONFIG REQUIRED)
set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp)
target_link_libraries(untitled Eigen3::Eigen)